@@ -88,7 +88,7 @@ def getOldHeader(pdblist):
         
     return oldHeader.getvalue()
 
-def printPQRHeader(pdblist, atomlist, reslist, charge, ff, warnings, pH, ffout):
+def printPQRHeader(pdblist, atomlist, reslist, charge, ff, warnings, pH, ffout, cl_args):
     """
         Print the header for the PQR file
 
@@ -100,7 +100,9 @@ def printPQRHeader(pdblist, atomlist, reslist, charge, ff, warnings, pH, ffout):
             charge:   The total charge on the protein (float)
             ff:       The forcefield name (string)
             warnings: A list of warnings generated from routines (list)
-            options:  A dictionary of command lnie options (float)
+            pH :  pH value, if any. (float)
+            ffout :  ff used for naming scheme (string)
+            cl_args : the command line argument used when running pdb2pqr (string)
         Returns
             header:   The header for the PQR file (string)
     """
@@ -110,6 +112,10 @@ def printPQRHeader(pdblist, atomlist, reslist, charge, ff, warnings, pH, ffout):
         ff = ff.upper()
     header = "REMARK   1 PQR file generated by PDB2PQR (Version %s)\n" % __version__
     header = header + "REMARK   1\n"
+    if cl_args is not None:
+        header +=     "REMARK   1 Command line used to generate this file:\n"
+        header +=     "REMARK   1 " + cl_args + "\n"
+        header = header + "REMARK   1\n"
     header = header + "REMARK   1 Forcefield Used: %s\n" % ff
     if not ffout is None:
         header = header + "REMARK   1 Naming Scheme Used: %s\n" % ffout
@@ -170,7 +176,8 @@ def runPDB2PQR(pdblist, ff,
                typemap = False,
                userff = None,
                usernames = None,
-               ffout = None):
+               ffout = None,
+               commandLine=None):
     """
         Run the PDB2PQR Suite
 
@@ -395,7 +402,8 @@ def runPDB2PQR(pdblist, ff,
             myNameScheme = myForcefield
         myRoutines.applyNameScheme(myNameScheme)
 
-    header = printPQRHeader(pdblist, misslist, reslist, charge, ff, myRoutines.getWarnings(), ph, ffout)
+    header = printPQRHeader(pdblist, misslist, reslist, charge, ff, 
+                            myRoutines.getWarnings(), ph, ffout, commandLine)
     lines = myProtein.printAtoms(hitlist, chain)
 
     # Determine if any of the atoms in misslist were ligands
@@ -523,6 +531,8 @@ def mainCommand(argv):
     
     (options, args) = parser.parse_args(argv[1:]) 
     
+    commandLine = ' '.join(argv[1:])
+    
     if len(args) != 2:
         parser.error('Incorrect number (%d) of arguments!\nargs: %s' % (len(args), args))   
 
@@ -634,7 +644,8 @@ def mainCommand(argv):
                                                   typemap = options.typemap,
                                                   userff = userfffile,
                                                   usernames = usernamesfile,
-                                                  ffout = options.ffout)
+                                                  ffout = options.ffout,
+                                                  commandLine = commandLine)
     except PDB2PQRError as er:
         print er
         sys.exit(1)
